Show description and photo

--- a/RR_8_AleksanderKarbowiak_454783.html
+++ b/RR_8_AleksanderKarbowiak_454783.html
@@ -129,9 +129,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 </header>
 
-<section id="quarto" class="level2">
-<h2 class="anchored" data-anchor-id="quarto">Quarto</h2>
-<p>Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <a href="https://quarto.org" class="uri">https://quarto.org</a>.</p>
+<div style="text-align: justify">
+<hr>
+<section id="show-description" class="level2">
+<h2 class="anchored" data-anchor-id="show-description">Show description</h2>
+<p><strong><em>The Office</em></strong> is an American mockumentary sitcom television series that depicts the everyday work lives of office employees at the Scranton, Pennsylvania, branch of the fictional <strong><em>Dunder Mifflin Paper Company</em></strong>. It aired on <strong><em>NBC</em></strong> from March 24, 2005, to May 16, 2013, with a total of nine seasons consisting of 201 episodes. American version is based on the 2001–2003 <strong><em>BBC</em></strong> series of the same name. Like its British counterpart, the series was filmed in a single-camera setup without a studio audience or a, to mirror the look of an actual documentary.</p>
 </section>
 <section id="running-code" class="level2">
 <h2 class="anchored" data-anchor-id="running-code">Running Code</h2>
@@ -150,6 +152,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <p>The <code>echo: false</code> option disables the printing of code (only output is displayed).</p>
 </section>
+</div>
 
 </main>
 <!-- /main column -->
